Fix: Footer is not responsive
Footer is not responsive #5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,8 +278,7 @@ header img{
 }
 
 .social-media-icon{
-    padding: 10.4% 20%;
-    height: 40px;
+    padding: 6% 20%;
     background-color: #F9975D;
 }
 
